Fixing footer alignment

--- a/main.css
+++ b/main.css
@@ -34,8 +34,9 @@ main {
 }
 
 footer {
-	grid-column: 3;
+	grid-column: 2 / 4;
 	grid-row: 4;
+	text-align: center;
 }
 
 .navbar {
